--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/lab": "^5.0.0-alpha.132",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "emoji-picker-react": "^4.5.0",
     "firebase": "^9.22.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-modal-image": "^2.6.0",
