--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.1.2",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-modal-image": "^2.6.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
+    "react-scrollable-feed": "^1.3.2",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
